test/positive/AbstractClass.java
public abstract class AbstractClass {
    public Abstractclass() {}
}
