test/negative/ClassWithIdenticalConstructorSignatures.java
public class ClassWithIdenticalConstructorSignatures {
    public ClassWithIdenticalConstructorSignatures(int a, int b) {
    }
    protected ClassWithIdenticalConstructorSignatures(int x, int y) {
    }
}
